--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.24.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-modal": "^1.7.7",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "webpack": "^2.5.0"
